# Transparentformer

./: .gitignore  README.md  pyproject.toml
csrc/: binding.cpp
docs/: 00-foundations.md  01-attention.md  02-blocks.md  03-training-and-generation.md  04-optimization-and-internals.md  05-advanced.md  README.md
kernels/: cabin.toml
kernels/include/kernels/: kernels.h  kernels.hpp
kernels/src/: kernels.c  kernels.cc
scripts/: xor_learning.py
src/transparentformer/: __init__.py  cext.py  warmup.py
src/transparentformer/models/: __init__.py  xor.py
tests/: test_cext_scaffold.py  test_clib_works.py  test_scaffold.py  test_trans_lib.py  test_warmup.py
tests/benchmarks/: benchmark_fixture.py  test_bench_matmul.py
